#148 - Made the rendering of the two pages: My signals and Followed signals. Rewrote the functionality so it can render properly. They are hidden by default. Whenever you click the button, the content of the page shows under the buttons. Reworked the pagination of the pages but for some reason it is not working well. Further work to do: fix the pagionation. Did a lot of research in order to understand different types of rendering and to implement it into the project.

--- a/assets/css/my_profile.css
+++ b/assets/css/my_profile.css
@@ -110,8 +110,12 @@
   width: 80%;
 }
 .signals-user-show{
+  /* display: none; */
   margin-top: 2%;
   width: 100%;
   height: 100%;
   display: inline-block;
+}
+.signals-user-show .row{
+  margin-bottom: 5%;
 }
