--- a/assets/css/registered_dogs.css
+++ b/assets/css/registered_dogs.css
@@ -42,10 +42,18 @@
     opacity: 1;
 }
 .last-signals-dogs-div{
+    display: none;
     position: absolute;
     margin-right: 12%;
     /* margin-left: 9%; */
 }
+.last-signals-dogs-div2{
+    display: none;
+    position: absolute;
+    margin-right: 12%;
+    /* margin-left: 9%; */
+}
+
 .col-container .col-container-shadow{
     opacity: 0;
 }
